test/bitfield3.l1.out
warning: name space references undefined type:
	foo
error: attempt to read object of undefined type: foo
	#0                    cval	(builtin function)
	#1                   entry	(bitfield3.l1:85)
